@@ -19,13 +19,6 @@ package org.apache.solr.handler.component;
 import com.carrotsearch.hppc.IntIntHashMap;
 import com.carrotsearch.hppc.cursors.IntIntCursor;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableSortedSet;
-import com.google.common.collect.ObjectArrays;
-import com.google.common.collect.Sets;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.lang.ref.WeakReference;
@@ -36,8 +29,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -48,7 +39,10 @@ import java.util.Objects;
 import java.util.Queue;
 import java.util.Set;
 import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
@@ -61,6 +55,8 @@ import org.apache.lucene.search.BooleanQuery;
 import org.apache.lucene.search.BoostQuery;
 import org.apache.lucene.search.FieldComparator;
 import org.apache.lucene.search.FieldComparatorSource;
+import org.apache.lucene.search.Pruning;
+import org.apache.lucene.search.Query;
 import org.apache.lucene.search.SimpleFieldComparator;
 import org.apache.lucene.search.Sort;
 import org.apache.lucene.search.SortField;
@@ -70,20 +66,26 @@ import org.apache.lucene.util.BytesRefBuilder;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.QueryElevationParams;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.DOMUtil;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.core.SolrResourceNotFoundException;
+import org.apache.solr.query.FilterQuery;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.transform.ElevatedMarkerFactory;
 import org.apache.solr.response.transform.ExcludedMarkerFactory;
 import org.apache.solr.schema.FieldType;
 import org.apache.solr.schema.SchemaField;
+import org.apache.solr.search.CollapsingQParserPlugin;
+import org.apache.solr.search.ExtendedQuery;
 import org.apache.solr.search.QueryParsing;
+import org.apache.solr.search.QueryUtils;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.search.SortSpec;
+import org.apache.solr.search.WrappedQuery;
 import org.apache.solr.search.grouping.GroupingSpecification;
 import org.apache.solr.util.RefCounted;
 import org.apache.solr.util.SafeXMLParsing;
@@ -121,6 +123,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
    * configured order (so-called priority).
    */
   public static final String BOOSTED = "BOOSTED";
+
   /** Key to {@link SolrQueryRequest#getContext()} for a {@code Set<BytesRef>} of excluded IDs. */
   public static final String EXCLUDED = "EXCLUDED";
 
@@ -136,29 +139,35 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
 
   protected Analyzer queryAnalyzer;
   protected SchemaField uniqueKeyField;
+
   /**
    * @see QueryElevationParams#FORCE_ELEVATION
    */
   protected boolean forceElevation;
+
   /**
    * @see QueryElevationParams#USE_CONFIGURED_ELEVATED_ORDER
    */
   protected boolean useConfiguredElevatedOrder;
+
   /** If {@link #inform(SolrCore)} completed without error. */
   protected boolean initialized;
 
   private final Object LOCK = new Object(); // for cache*
+
   /**
    * Cached IndexReader associated with {@link #cacheElevationProvider}. Must be accessed under
    * lock.
    */
   private WeakReference<IndexReader> cacheIndexReader = NULL_REF;
+
   /**
    * Cached elevation provider. Must be accessed under lock. {@link
    * #handleConfigLoadingException(Exception)} has the lock when called and may access this if it
    * wishes to return a previous good result.
    */
   protected ElevationProvider cacheElevationProvider = null; // keep null
+
   /**
    * Cached version / timestamp of the data underlying {@link #cacheElevationProvider}. -1 means
    * unsupported. Must be accessed under lock.
@@ -328,8 +337,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
    *
    * @return The cached or loaded {@link ElevationProvider}.
    */
-  @VisibleForTesting
-  ElevationProvider getElevationProvider(IndexReader reader, SolrCore core) {
+  protected ElevationProvider getElevationProvider(IndexReader reader, SolrCore core) {
     synchronized (LOCK) {
       if (cacheElevationProvider != null && Objects.equals(cacheIndexReader.get(), reader)) {
         return cacheElevationProvider; // cache hit !
@@ -376,7 +384,8 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
    *
    * @return The loaded {@link ElevationProvider}; not null.
    */
-  private ElevationProvider loadElevationProvider(SolrCore core) throws IOException, SAXException {
+  protected ElevationProvider loadElevationProvider(SolrCore core)
+      throws IOException, SAXException {
     Document xmlDocument;
     try {
       xmlDocument = SafeXMLParsing.parseConfigXML(log, core.getResourceLoader(), configFileName);
@@ -482,6 +491,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
     Elevation elevation = getElevation(rb);
     if (elevation != null) {
       setQuery(rb, elevation);
+      setFilters(rb, elevation);
       setSort(rb, elevation);
     }
 
@@ -551,6 +561,108 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
       }
       rb.setQuery(queryBuilder.build());
     }
+  }
+
+  /**
+   * Updates any filters that have been tagged for exclusion. Filters can be tagged for exclusion
+   * via the syntax fq={!tag=t1}field1:value1&elevate.excludeTags=t1 This method modifies each
+   * "excluded" filter so that it becomes a boolean OR of the original filter with an "include
+   * query" that matches the elevated documents by their IDs. To be clear, the "excluded" filters
+   * are not ignored entirely, but rather broadened so that the elevated documents are allowed
+   * through.
+   */
+  private void setFilters(ResponseBuilder rb, Elevation elevation) {
+    SolrParams params = rb.req.getParams();
+
+    String tagStr = params.get(QueryElevationParams.ELEVATE_EXCLUDE_TAGS);
+    if (StrUtils.isNullOrEmpty(tagStr)) {
+      // the parameter that specifies tags for exclusion was not provided or had no value
+      return;
+    }
+
+    List<String> excludeTags = StrUtils.splitSmart(tagStr, ',');
+    excludeTags.removeIf(s -> StrUtils.isBlank(s));
+    if (excludeTags.isEmpty()) {
+      // the parameter that specifies tags for exclusion was provided but the tag names were blank
+      return;
+    }
+
+    List<Query> filters = rb.getFilters();
+    if (filters == null || filters.isEmpty()) {
+      // no filters were provided
+      return;
+    }
+
+    Set<Query> excludeSet = QueryUtils.getTaggedQueries(rb.req, excludeTags);
+    if (excludeSet.isEmpty()) {
+      // no filters were tagged
+      return;
+    }
+
+    List<Query> updatedFilters = new ArrayList<Query>();
+
+    for (Query filter : filters) {
+
+      // filters that weren't tagged for exclusion are left unchanged
+      if (!excludeSet.contains(filter)) {
+        updatedFilters.add(filter);
+        continue;
+      }
+
+      // if a collapse filter was tagged for exclusion, throw an Exception; the desired semantics of
+      // tagging a collapse filter this way is unclear; furthermore, CollapsingPostFilter is a
+      // special case that cannot be included as a clause in a BooleanQuery; its createWeight()
+      // method would throw an UnsupportedOperationException when called by the BooleanQuery's own
+      // createWeight()
+      if (filter instanceof CollapsingQParserPlugin.CollapsingPostFilter) {
+        throw new SolrException(
+            SolrException.ErrorCode.BAD_REQUEST, "collapse filter cannot be tagged for exclusion");
+      }
+
+      // we're looking at a filter that has been tagged for exclusion; first, figure out whether it
+      // avoids the cache; if the original filter had the Local Param "cache" and/or "cost", it will
+      // be an ExtendedQuery; unless it specifically had cache=false, it's cacheable
+      boolean avoidCache =
+          (filter instanceof ExtendedQuery) && !((ExtendedQuery) filter).getCache();
+
+      // transform the filter into a boolean OR of the original filter with the "include query"
+      // matching the elevated docs
+      BooleanQuery.Builder queryBuilder = new BooleanQuery.Builder();
+      if (avoidCache || filter instanceof FilterQuery) {
+        // if the original filter avoids the cache, we add it to the BooleanQuery as-is; we do the
+        // same if the filter is _already_ a FilterQuery -- there's no need to wrap it in another;
+        // note that FilterQuery.getCache() returns false, so in this scenario, avoidCache will be
+        // true and the instanceof check is not necessary; however, it is left in place for clarity
+        // and as a failsafe in case the behavior of FilterQuery.getCache() should ever change
+        queryBuilder.add(filter, BooleanClause.Occur.SHOULD);
+      } else {
+        // the original filter is cacheable and not already a FilterQuery; wrap it in a FilterQuery
+        // so that it always consults the filter cache even though it will be represented as a
+        // clause within a larger non-caching BooleanQuery
+        queryBuilder.add(new FilterQuery(filter), BooleanClause.Occur.SHOULD);
+      }
+      queryBuilder.add(elevation.includeQuery, BooleanClause.Occur.SHOULD);
+      BooleanQuery updatedFilter = queryBuilder.build();
+
+      // we don't want to cache the BooleanQuery that we've built from the original filter and the
+      // elevated doc ids; the first clause of the BooleanQuery will be a FilterQuery if the
+      // original filter was cacheable, and FilterQueries always consult the cache; the second
+      // clause is a set of doc ids that should be fast on its own
+      WrappedQuery wrappedUpdatedFilter = new WrappedQuery(updatedFilter);
+      wrappedUpdatedFilter.setCache(false);
+
+      // if the original filter is an ExtendedQuery, it may have a user-provided cost; this cost
+      // would be ignored for nested queries so we copy it to the outer WrappedQuery; this allows it
+      // serve as a tiebreaker for filters that produce the same internal cost in the case where the
+      // user-provided cost is >= 100
+      if (filter instanceof ExtendedQuery) {
+        wrappedUpdatedFilter.setCost(((ExtendedQuery) filter).getCost());
+      }
+
+      updatedFilters.add(wrappedUpdatedFilter);
+    }
+
+    rb.setFilters(updatedFilters);
   }
 
   private void setSort(ResponseBuilder rb, Elevation elevation) throws IOException {
@@ -809,7 +921,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
     elevationBuilder.addExcludedIds(
         excludedIds == null ? Collections.emptyList() : Arrays.asList(excludedIds));
     Map<ElevatingQuery, ElevationBuilder> elevationBuilderMap =
-        ImmutableMap.of(elevatingQuery, elevationBuilder);
+        Map.of(elevatingQuery, elevationBuilder);
     synchronized (LOCK) {
       cacheIndexReader = new WeakReference<>(reader);
       cacheElevationProvider = createElevationProvider(elevationBuilderMap);
@@ -1030,6 +1142,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
      * null</code>. The order is retained.
      */
     private LinkedHashSet<BytesRef> elevatedIds;
+
     /**
      * The ids of the excluded documents that should not appear in search results; can be <code>null
      * </code>.
@@ -1051,7 +1164,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
 
     public ElevationBuilder addExcludedIds(Collection<String> ids) {
       if (excludedIds == null) {
-        excludedIds = new HashSet<>(Math.max(10, ids.size()));
+        excludedIds = CollectionUtil.newHashSet(Math.max(10, ids.size()));
       }
       for (String id : ids) {
         excludedIds.add(toBytesRef(id));
@@ -1111,7 +1224,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         includeQuery = EMPTY_QUERY;
         this.elevatedIds = Collections.emptySet();
       } else {
-        this.elevatedIds = ImmutableSet.copyOf(elevatedIds);
+        this.elevatedIds = Collections.unmodifiableSet(new LinkedHashSet<>(elevatedIds));
         BooleanQuery.Builder includeQueryBuilder = new BooleanQuery.Builder();
         for (BytesRef elevatedId : elevatedIds) {
           includeQueryBuilder.add(
@@ -1124,12 +1237,11 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         this.excludedIds = Collections.emptySet();
         excludeQueries = null;
       } else {
-        this.excludedIds = ImmutableSet.copyOf(excludedIds);
-        List<TermQuery> excludeQueriesBuilder = new ArrayList<>(excludedIds.size());
-        for (BytesRef excludedId : excludedIds) {
-          excludeQueriesBuilder.add(new TermQuery(new Term(queryFieldName, excludedId)));
-        }
-        excludeQueries = excludeQueriesBuilder.toArray(new TermQuery[0]);
+        this.excludedIds = Collections.unmodifiableSet(new LinkedHashSet<>(excludedIds));
+        this.excludeQueries =
+            this.excludedIds.stream()
+                .map(excludedId -> new TermQuery(new Term(queryFieldName, excludedId)))
+                .toArray(TermQuery[]::new);
       }
     }
 
@@ -1155,15 +1267,13 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         return this;
       }
       Set<BytesRef> elevatedIds =
-          ImmutableSet.<BytesRef>builder()
-              .addAll(this.elevatedIds)
-              .addAll(elevation.elevatedIds)
-              .build();
+          Stream.concat(this.elevatedIds.stream(), elevation.elevatedIds.stream())
+              .collect(Collectors.toCollection(LinkedHashSet::new));
       boolean overlappingElevatedIds =
           elevatedIds.size() != (this.elevatedIds.size() + elevation.elevatedIds.size());
       BooleanQuery.Builder includeQueryBuilder = new BooleanQuery.Builder();
       Set<BooleanClause> clauseSet =
-          (overlappingElevatedIds ? Sets.newHashSetWithExpectedSize(elevatedIds.size()) : null);
+          (overlappingElevatedIds ? CollectionUtil.newHashSet(elevatedIds.size()) : null);
       for (BooleanClause clause : this.includeQuery.clauses()) {
         if (!overlappingElevatedIds || clauseSet.add(clause)) {
           includeQueryBuilder.add(clause);
@@ -1175,10 +1285,8 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         }
       }
       Set<BytesRef> excludedIds =
-          ImmutableSet.<BytesRef>builder()
-              .addAll(this.excludedIds)
-              .addAll(elevation.excludedIds)
-              .build();
+          Stream.concat(this.excludedIds.stream(), elevation.excludedIds.stream())
+              .collect(Collectors.toUnmodifiableSet());
       TermQuery[] excludeQueries;
       if (this.excludeQueries == null) {
         excludeQueries = elevation.excludeQueries;
@@ -1189,14 +1297,16 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
             excludedIds.size() != (this.excludedIds.size() + elevation.excludedIds.size());
         if (overlappingExcludedIds) {
           excludeQueries =
-              ImmutableSet.<TermQuery>builder()
-                  .add(this.excludeQueries)
-                  .add(elevation.excludeQueries)
-                  .build()
-                  .toArray(new TermQuery[0]);
+              Stream.concat(
+                      Arrays.stream(this.excludeQueries), Arrays.stream(elevation.excludeQueries))
+                  .distinct()
+                  .toArray(TermQuery[]::new);
         } else {
           excludeQueries =
-              ObjectArrays.concat(this.excludeQueries, elevation.excludeQueries, TermQuery.class);
+              Stream.concat(
+                      Arrays.stream(this.excludeQueries), Arrays.stream(elevation.excludeQueries))
+                  .distinct()
+                  .toArray(TermQuery[]::new);
         }
       }
       return new Elevation(elevatedIds, includeQueryBuilder.build(), excludedIds, excludeQueries);
@@ -1205,9 +1315,13 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
     @Override
     public String toString() {
       return "{elevatedIds="
-          + Collections2.transform(elevatedIds, BytesRef::utf8ToString)
+          + elevatedIds.stream()
+              .map(BytesRef::utf8ToString)
+              .collect(Collectors.toCollection(LinkedHashSet::new))
           + ", excludedIds="
-          + Collections2.transform(excludedIds, BytesRef::utf8ToString)
+          + excludedIds.stream()
+              .map(BytesRef::utf8ToString)
+              .collect(Collectors.toCollection(LinkedHashSet::new))
           + "}";
     }
   }
@@ -1237,7 +1351,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
 
     @Override
     public FieldComparator<Integer> newComparator(
-        String fieldName, final int numHits, boolean enableSkipping, boolean reversed) {
+        String fieldName, final int numHits, Pruning pruning, boolean reversed) {
       return new SimpleFieldComparator<>() {
         final int[] values = new int[numHits];
         int bottomVal;
@@ -1448,7 +1562,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
       public Builder<E, M> addSubset(Collection<E> subset, M matchValue) {
         if (!subset.isEmpty()) {
           TrieSubsetMatcher.Node<E, M> node = root;
-          for (E e : ImmutableSortedSet.copyOf(subset)) {
+          for (E e : new TreeSet<>(subset)) {
             node = node.getOrCreateChild(e);
           }
           node.addMatchValue(matchValue);
@@ -1480,10 +1594,10 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
      * Returns an iterator over all the subsets that are contained by the provided set. The returned
      * iterator does not support removal.
      *
-     * @param set This set is copied to a new {@link ImmutableSortedSet} with natural ordering.
+     * @param set This set is copied to a new {@link SortedSet} with natural ordering.
      */
     public Iterator<M> findSubsetsMatching(Collection<E> set) {
-      return new MatchIterator(ImmutableSortedSet.copyOf(set));
+      return new MatchIterator(new TreeSet<>(set));
     }
 
     /** Trie node. */
@@ -1501,7 +1615,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
       /** Gets the child node for the provided element, or creates it if it does not exist. */
       Node<E, M> getOrCreateChild(E e) {
         if (children == null) {
-          children = new HashMap<>(4);
+          children = CollectionUtil.newHashMap(4);
         }
         Node<E, M> child = children.get(e);
         if (child == null) {
@@ -1542,12 +1656,12 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
        * memory usage and make it more efficient.
        */
       void trimAndMakeImmutable() {
-        if (children != null && !(children instanceof ImmutableMap)) {
+        if (children != null) {
           for (Node<E, M> child : children.values()) child.trimAndMakeImmutable();
-          children = ImmutableMap.copyOf(children);
+          children = Map.copyOf(children);
         }
-        if (matchValues != null && !(matchValues instanceof ImmutableList)) {
-          matchValues = ImmutableList.copyOf(matchValues);
+        if (matchValues != null) {
+          matchValues = List.copyOf(matchValues);
         }
       }
     }
