@@ -22,14 +22,14 @@ import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.StringContains.containsString;
 
 import com.carrotsearch.randomizedtesting.rules.SystemPropertiesRestoreRule;
-import com.google.common.collect.ImmutableMap;
-import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import org.apache.commons.io.FileUtils;
+import java.nio.file.StandardCopyOption;
+import java.util.Map;
+import org.apache.commons.io.file.PathUtils;
 import org.apache.solr.SolrTestCaseJ4;
-import org.hamcrest.MatcherAssert;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.RuleChain;
@@ -60,14 +60,14 @@ public class TestConfigSets extends SolrTestCaseJ4 {
     NodeConfig config =
         SolrXmlConfig.fromString(
             solrHome, "<solr><str name=\"configSetBaseDir\">configsets</str></solr>");
-    MatcherAssert.assertThat(
+    assertThat(
         config.getConfigSetBaseDirectory().toAbsolutePath(),
         is(Paths.get("/path/to/solr/home/configsets").toAbsolutePath()));
 
     NodeConfig absConfig =
         SolrXmlConfig.fromString(
             solrHome, "<solr><str name=\"configSetBaseDir\">/path/to/configsets</str></solr>");
-    MatcherAssert.assertThat(
+    assertThat(
         absConfig.getConfigSetBaseDirectory().toAbsolutePath(),
         is(Paths.get("/path/to/configsets").toAbsolutePath()));
   }
@@ -79,9 +79,9 @@ public class TestConfigSets extends SolrTestCaseJ4 {
       container = setupContainer(TEST_PATH().resolve("configsets").toString());
       Path solrHome = Paths.get(container.getSolrHome());
 
-      SolrCore core1 = container.create("core1", ImmutableMap.of("configSet", "configset-2"));
-      MatcherAssert.assertThat(core1.getCoreDescriptor().getName(), is("core1"));
-      MatcherAssert.assertThat(
+      SolrCore core1 = container.create("core1", Map.of("configSet", "configset-2"));
+      assertThat(core1.getCoreDescriptor().getName(), is("core1"));
+      assertThat(
           Paths.get(core1.getDataDir()).toString(),
           is(solrHome.resolve("core1").resolve("data").toString()));
     } finally {
@@ -98,10 +98,10 @@ public class TestConfigSets extends SolrTestCaseJ4 {
               Exception.class,
               "Expected core creation to fail",
               () -> {
-                container.create("core1", ImmutableMap.of("configSet", "nonexistent"));
+                container.create("core1", Map.of("configSet", "nonexistent"));
               });
       Throwable wrappedException = getWrappedException(thrown);
-      MatcherAssert.assertThat(wrappedException.getMessage(), containsString("nonexistent"));
+      assertThat(wrappedException.getMessage(), containsString("nonexistent"));
     } finally {
       if (container != null) container.shutdown();
     }
@@ -110,31 +110,32 @@ public class TestConfigSets extends SolrTestCaseJ4 {
   @Test
   public void testConfigSetOnCoreReload() throws IOException {
     Path testDirectory = createTempDir("core-reload");
-    File configSetsDir = new File(testDirectory.toFile(), "configsets");
+    Path configSetsDir = testDirectory.resolve("configsets");
 
-    FileUtils.copyDirectory(getFile("solr/configsets"), configSetsDir);
+    PathUtils.copyDirectory(getFile("solr/configsets").toPath(), configSetsDir);
 
-    String csd = configSetsDir.getAbsolutePath();
+    String csd = configSetsDir.toAbsolutePath().toString();
     System.setProperty("configsets", csd);
 
     CoreContainer container = new CoreContainer(SolrXmlConfig.fromString(testDirectory, solrxml));
     container.load();
 
     // We initially don't have a /dump handler defined
-    SolrCore core = container.create("core1", ImmutableMap.of("configSet", "configset-2"));
-    MatcherAssert.assertThat(
+    SolrCore core = container.create("core1", Map.of("configSet", "configset-2"));
+    assertThat(
         "No /dump handler should be defined in the initial configuration",
         core.getRequestHandler("/dump"),
         is(nullValue()));
 
     // Now copy in a config with a /dump handler and reload
-    FileUtils.copyFile(
-        getFile("solr/collection1/conf/solrconfig-withgethandler.xml"),
-        new File(new File(configSetsDir, "configset-2/conf"), "solrconfig.xml"));
+    Files.copy(
+        getFile("solr/collection1/conf/solrconfig-withgethandler.xml").toPath(),
+        configSetsDir.resolve("configset-2/conf").resolve("solrconfig.xml"),
+        StandardCopyOption.REPLACE_EXISTING);
     container.reload("core1");
 
     core = container.getCore("core1");
-    MatcherAssert.assertThat(
+    assertThat(
         "A /dump handler should be defined in the reloaded configuration",
         core.getRequestHandler("/dump"),
         is(notNullValue()));
